--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,1 +1,10 @@
-<h1>RESULTS</h1>
+<div class ="row">
+  <div class="col-md-6 col-md-offset-3">
+      <h1 class="top-header-style text-center">Search Results:</h1>
+      <p class="top-para-style text-center"><strong>Results are in JSON format</strong></p>
+      <div class="well">
+        <p><%= @display_format %></p>  
+      </div>
+  </div>
+</div>
+
